Add Subtle Volumetric Lighting and Fog Atmosphere

--- a/index.html
+++ b/index.html
@@ -38,13 +38,14 @@
     <script src="src/js/app/world/renderer.class.js"></script>
     <script src="src/js/app/world/grid.class.js"></script>
     <script src="src/js/app/world/floor.class.js"></script>
+    <script src="src/js/app/world/atmosphere.class.js"></script>
     <script src="src/shaders/dummy-vertex.js"></script>
     <script src="src/shaders/dummy-fragment.js"></script>
     <script src="src/shaders/grid-vertex.js"></script>
     <script src="src/shaders/grid-fragment.js"></script>
     <script>
 
-        var app = new H.App();
+        window.app = new H.App();
 
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
