Implement OpenAI Realtime API with WebRTC

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <script src="src/js/libs/burno-0.1.js"></script>
     <script src="src/js/app/app.class.js"></script>
     <script src="src/js/app/microphone.class.js"></script>
+    <script src="src/js/app/openai-realtime.class.js"></script>
     <script src="src/js/app/ui.class.js"></script>
     <script src="src/js/app/debug/stats.class.js"></script>
     <script src="src/js/app/debug/tweaks.class.js"></script>
