Add missing UI container elements to HTML

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <body>
     <canvas id="canvas"></canvas>
 
+    <div class="ui">
+        <div class="controls"></div>
+    </div>
+
     <div class="debug"></div>
 
     <a class="back-to-site dark" href="https://bruno-simon.com"><i></i> Bruno SIMON</a>
